--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            .highlight {
+              display: flex;      
+              color: white;
+              background-color: black;
+              padding: 10px;
+              height: 30px;
+              width: 100px;
+              align-items: center;
+              justify-content: center;
+              margin: 8px;
+            }
+          </style>
         <title>rock paper scissor</title>
     </head>
     <body>
         <h1>rock paper scissor</h1>
+
+        <div id="container"></div>
+
+          <!-- <button id="rock">Rock</button>-->
+
+          <!--<button id="paper">Paper</button> -->   
+
+         <!-- <button id="scissors">Scissors</button>-->
+        
+        
 
         <script src="app.js"></script>
     </body>
